# zap-engine

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/: MAP.md
crates/zap-engine/: Cargo.toml  MAP.md
crates/zap-engine/src/: lib.rs
crates/zap-engine/src/api/: MAP.md  game.rs  types.rs
crates/zap-engine/src/assets/: MAP.md  manifest.rs  registry.rs
crates/zap-engine/src/bridge/: MAP.md  protocol.rs
crates/zap-engine/src/components/: MAP.md  animation.rs  emitter.rs  entity.rs  layer.rs  mesh.rs  mod.rs  sprite.rs  tilemap.rs
crates/zap-engine/src/core/: MAP.md  mod.rs  physics.rs  scene.rs  time.rs
crates/zap-engine/src/extensions/: MAP.md  easing.rs  mod.rs  spatial.rs  transform.rs  tween.rs
crates/zap-engine/src/input/: MAP.md  queue.rs
crates/zap-engine/src/renderer/: MAP.md  camera.rs  instance.rs  mod.rs  sdf_instance.rs  traits.rs
crates/zap-engine/src/systems/: MAP.md  animation.rs  debug.rs  effects.rs  emitter.rs  lighting.rs  mod.rs  render.rs  sdf_render.rs  text.rs  vector.rs
crates/zap-engine/src/systems/effects/: debug_line.rs  electric_arc.rs  geometry.rs  mod.rs  particle.rs  rng.rs  segment_color.rs
crates/zap-web/: Cargo.toml  MAP.md
crates/zap-web/src/: lib.rs  runner.rs
docs/: BUILD.md  COORDINATE_SPACE_CONTRACT.md  DECISIONS.md  DEPLOYMENT.md  DEV_EXPERIENCE.md  EXTENSIONS.md  GLYPHER.md  MAP.md  MASTERPLAN.md  SOLAR_SYSTEM_ARCHITECTURE_REPORT.md  VISION.md  architecture-schematics.md  lifecycle-data-flows.md
examples/: MAP.md
examples/basic-demo/: Cargo.toml  MAP.md  main.ts
examples/basic-demo/public/assets/: assets.json
examples/basic-demo/src/: game.rs  lib.rs
examples/chemistry-lab/: App.tsx  CameraControls.tsx  Cargo.toml  MAP.md  PeriodicTable.tsx  index.html  main.tsx
examples/chemistry-lab/src/: bohr.rs  chemistry.rs  elements.rs  game.rs  interaction.rs  lib.rs  math3d.rs  molecule.rs  molecule3d.rs  periodic_table.rs  physics.rs  render3d.rs  renderer.rs  sim.rs  vsepr.rs
examples/flag-parade/: App.tsx  Cargo.toml  MAP.md  index.html  main.tsx
examples/flag-parade/public/assets/: assets.json
examples/flag-parade/src/: flags.rs  game.rs  lib.rs
examples/glypher/: App.tsx  Cargo.toml  MAP.md  index.html  main.tsx
examples/glypher/data/: glyphs_baked.json  sayings.json
examples/glypher/public/assets/: assets.json
examples/glypher/src/: game.rs  glyphs.rs  lib.rs  sayings.rs  tracing.rs
examples/physics-playground/: App.tsx  Cargo.toml  MAP.md  index.html  main.tsx
examples/physics-playground/public/assets/: assets.json
examples/physics-playground/src/: game.rs  lib.rs
examples/pool-game/: App.tsx  Cargo.toml  index.html
examples/pool-game/public/assets/: assets.json
examples/pool-game/src/: balls.rs  game.rs  lib.rs
examples/react-demo/: App.tsx  MAP.md  index.html  main.tsx
examples/solar-system/: App.tsx  Cargo.toml  MAP.md  index.html  main.tsx
examples/solar-system/src/: bodies.rs  game.rs  lib.rs  orbit.rs
examples/thread-town/: App.tsx  Cargo.toml  generate_sprites.py  index.html  main.tsx
examples/thread-town/public/assets/: assets.json
examples/thread-town/src/: game.rs  lib.rs
examples/zap-engine-template/: Cargo.toml  MAP.md  README.md  index.html  main.ts
examples/zap-engine-template/public/assets/: assets.json
examples/zap-engine-template/src/: game.rs  lib.rs
examples/zapzap-mini/: App.tsx  Cargo.toml  MAP.md  index.html  main.tsx
examples/zapzap-mini/public/assets/: assets.json
examples/zapzap-mini/src/: animation.rs  board.rs  game.rs  lib.rs
infra/: .gitignore  MAP.md  package-lock.json  package.json
infra/lib/: zap-examples-stack.ts
scripts/: build-all.sh  deploy.sh
src/: MAP.md
src/engine/: MAP.md  index.ts
src/engine/assets/: MAP.md  loader.ts  manifest.ts
src/engine/audio/: MAP.md  sound-manager.ts
src/engine/react/: MAP.md  index.ts  useZapEngine.ts
src/engine/renderer/: MAP.md  canvas2d.ts  compositor.ts  constants.ts  index.ts  lighting.wgsl  molecule.wgsl  shaders.wgsl  types.ts  vector.wgsl  webgpu.ts
src/engine/worker/: MAP.md  engine.worker.ts  protocol.ts
tools/: MAP.md  bake-assets.ts  font-atlas-generator.html  generate_bg_texture.py  generate_normals.py  glyph-editor.html  tsconfig.json
