[workspace]
members = [
    "crates/zap-engine",
    "crates/zap-web",
    "examples/basic-demo",
    "examples/zap-engine-template",
    "examples/physics-playground",
    "examples/chemistry-lab",
    "examples/zapzap-mini",
    "examples/glypher",
    "examples/flag-parade",
    "examples/solar-system",
    "examples/pool-game",
]
resolver = "2"
