[package]
name = "zap-web"
version = "0.1.0"
edition = "2021"
description = "WASM bridge for ZapEngine — connects Rust game logic to the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["physics", "vectors"]
physics = ["zap-engine/physics"]
vectors = ["zap-engine/vectors"]

[dependencies]
zap-engine = { path = "../zap-engine", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"
log = "0.4"
