[package]
name = "thread-town"
version = "0.1.0"
edition = "2021"
description = "Thread synchronization visualizer for teaching concurrency concepts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zap-engine = { path = "../../crates/zap-engine", default-features = false }
zap-web = { path = "../../crates/zap-web", default-features = false }
glam = "0.30"
wasm-bindgen = "0.2"
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
